--- a/mdx_contents/blog/blockchain/uniswapV3/02.mdx
+++ b/mdx_contents/blog/blockchain/uniswapV3/02.mdx
@@ -4,6 +4,8 @@ date: '2023-05-15T00:00:00Z'
 modifiedTime: '2023-05-23T00:00:00Z'
 summary: Uniswap V3 - Explore tick and position structure in concentrated liquidity.
 image: 'blogs/blockchain/uniswapV3/cover.webp'
+seriesName: 'Uniswap V3'
+seriesIndex: 2
 type: BlogPost
 ---
 
