--- a/mdx_contents/blog/blockchain/security/reentrance_attack.mdx
+++ b/mdx_contents/blog/blockchain/security/reentrance_attack.mdx
@@ -4,6 +4,8 @@ date: '2023-05-09T00:00:00Z'
 modifiedTime: '2023-05-09T00:00:00Z'
 summary: Introduce re-entrancy vulnerability. Implement an example exploitation scenario and discuss potential solutions.
 image: 'blogs/blockchain/reentrance/cover.webp'
+seriesName: 'Block Security'
+seriesIndex: 1
 type: BlogPost
 ---
 
