--- a/mdx_contents/blog/blockchain/uniswapV3/01.mdx
+++ b/mdx_contents/blog/blockchain/uniswapV3/01.mdx
@@ -4,6 +4,8 @@ date: '2023-05-09T00:00:00Z'
 modifiedTime: '2023-05-22T00:00:00Z'
 summary: Uniswap V3 Introduction - Discover the innovative liquidity model, essential concepts, and mathematical formulas.
 image: 'blogs/blockchain/uniswapV3/cover.webp'
+seriesName: 'Uniswap V3'
+seriesIndex: 1
 type: BlogPost
 ---
 
