fix type error for uniswap blogs

--- a/mdx_contents/blog/blockchain/uniswapV3/03.mdx
+++ b/mdx_contents/blog/blockchain/uniswapV3/03.mdx
@@ -5,7 +5,7 @@ modifiedTime: '2023-05-25T00:00:00Z'
 summary: Uniswap V3 - Implement liquidity provision (minting) and DEX (token swapping).
 image: 'blogs/blockchain/uniswapV3/cover.webp'
 seriesName: 'Uniswap V3'
-seriesIndex: '3'
+seriesIndex: 3
 type: BlogPost
 ---
 
