--- a/mdx_contents/blog/blockchain/uniswapV3/03.mdx
+++ b/mdx_contents/blog/blockchain/uniswapV3/03.mdx
@@ -105,7 +105,7 @@ function balance1() private view returns (uint256) {
 }
 ```
 
-## Main flow
+## Minting flow
 
 Essentially, minting contains 4 steps:
 
@@ -608,9 +608,9 @@ function flash(
 }
 ```
 
-## Main flow
+## Swapping flow
 
 # What's next
 
-For the first time in this series, we will get our hands dirty and dive into the practical implementation of Uniswap V3.
-In the next part, we will reconstruct a minimal example of Uniswap V3 and gaining valuable hands-on experience with the protocol.
+Next time in this series, we will reconstruct a minimal demo of Uniswap V3.
+I hope you all will be gainin hands-on experience with the protocol.
