update reentrancy header

--- a/mdx_contents/blog/blockchain/security/reentrance_attack.mdx
+++ b/mdx_contents/blog/blockchain/security/reentrance_attack.mdx
@@ -1,5 +1,5 @@
 ---
-title: Re-entrancy attack - Concept, Simulation, and Solution
+title: Re-entrancy attack
 date: '2023-05-09T00:00:00Z'
 modifiedTime: '2023-05-09T00:00:00Z'
 summary: Introduce re-entrancy vulnerability. Implement an example exploitation scenario and discuss potential solutions.
