add search engine for blogs, fix blog ul, ol render error

--- a/mdx_contents/blog/blockchain/security/akutar_and_DDoS.mdx
+++ b/mdx_contents/blog/blockchain/security/akutar_and_DDoS.mdx
@@ -6,6 +6,7 @@ summary: Akutar NFT incident an example of DDoS attack from Ethernaut.
 image: 'blogs/blockchain/dos/cover.webp'
 seriesName: 'Block Security'
 seriesIndex: 3
+categories: blockchain, security
 type: BlogPost
 ---
 
