--- a/mdx_contents/blog/blockchain/security/private_storage.mdx
+++ b/mdx_contents/blog/blockchain/security/private_storage.mdx
@@ -6,6 +6,7 @@ summary: Introduce private storage vulnerability. An example of un-authenticated
 image: 'blogs/blockchain/private_storage/cover.webp'
 seriesName: 'Block Security'
 seriesIndex: 2
+categories: blockchain, security
 type: BlogPost
 ---
 
