--- a/mdx_contents/blog/blockchain/uniswapV3/01.mdx
+++ b/mdx_contents/blog/blockchain/uniswapV3/01.mdx
@@ -6,6 +6,7 @@ summary: Uniswap V3 Introduction - Discover the innovative liquidity model, esse
 image: 'blogs/blockchain/uniswapV3/cover.webp'
 seriesName: 'Uniswap V3'
 seriesIndex: 1
+categories: blockchain, DeFi
 type: BlogPost
 ---
 
