--- a/mdx_contents/blog/front_end/react_theme.mdx
+++ b/mdx_contents/blog/front_end/react_theme.mdx
@@ -4,6 +4,7 @@ date: '2023-05-07T00:00:00Z'
 modifiedTime: '2023-05-08T00:00:00Z'
 summary: How to properly create a theme manager in react-next.js, without flashing effect (FOUC).
 image: 'blogs/front_end/react_theme.webp'
+categories: frontend, react, dark theme
 type: BlogPost
 ---
 
