--- a/mdx_contents/blog/rust/01.mdx
+++ b/mdx_contents/blog/rust/01.mdx
@@ -4,6 +4,7 @@ date: '2023-03-26T00:00:00Z'
 modifiedTime: '2023-05-06T00:00:00Z'
 summary: Basic set up and an introduction to fundamental rust concepts
 image: 'blogs/rust/cover.webp'
+categories: rust, notes
 type: BlogPost
 ---
 
