--- a/mdx_contents/blog/blockchain/security/reentrance_attack.mdx
+++ b/mdx_contents/blog/blockchain/security/reentrance_attack.mdx
@@ -6,6 +6,7 @@ summary: Introduce re-entrancy vulnerability. Implement an example exploitation 
 image: 'blogs/blockchain/reentrance/cover.webp'
 seriesName: 'Block Security'
 seriesIndex: 1
+categories: blockchain, security
 type: BlogPost
 ---
 
