--- a/mdx_contents/blog/blockchain/security/akutar_and_DDoS.mdx
+++ b/mdx_contents/blog/blockchain/security/akutar_and_DDoS.mdx
@@ -2,10 +2,8 @@
 title: DDoS attack
 date: '2023-05-10T00:00:00Z'
 modifiedTime: '2023-05-10T00:00:00Z'
-summary: Akutar NFT incident an example of DDoS attack from Ethernaut.
+summary: Akutar NFT incident and an example of DDoS attack from Ethernaut.
 image: 'blogs/blockchain/dos/cover.webp'
-seriesName: 'Block Security'
-seriesIndex: 3
 categories: blockchain, security
 type: BlogPost
 ---
