--- a/mdx_contents/blog/rust/01.mdx
+++ b/mdx_contents/blog/rust/01.mdx
@@ -73,6 +73,8 @@ int main() {
 }
 ```
 
+A very good explanation can be found at [Let's Get Rusty YT Channel](https://youtu.be/VFIOSWy93H0)
+
 ## Pointer, Box & Smart pointers
 
 All values in Rust are stack allocated by default (continuous, high-speed access, [more info](https://www.guru99.com/stack-vs-heap.html)).
