--- a/mdx_contents/blog/blockchain/DeFi/uniswapV3/03.mdx
+++ b/mdx_contents/blog/blockchain/DeFi/uniswapV3/03.mdx
@@ -2,7 +2,7 @@
 title: UniswapV3 03 - Minting and Swapping
 date: '2023-05-23T00:00:00Z'
 modifiedTime: '2023-05-31T00:00:00Z'
-summary: Uniswap V3 - Implement liquidity provision (minting) and DEX (token swapping).
+summary: Peek into the implementation of liquidity provision (minting) and swapping.
 image: 'blogs/blockchain/uniswapV3/cover.webp'
 seriesName: 'Uniswap V3'
 seriesIndex: 3
