--- a/mdx_contents/blog/blockchain/DeFi/uniswapV3/01.mdx
+++ b/mdx_contents/blog/blockchain/DeFi/uniswapV3/01.mdx
@@ -2,7 +2,7 @@
 title: UniswapV3 01 - Introduction to concentrated liquidity
 date: '2023-05-09T00:00:00Z'
 modifiedTime: '2023-05-22T00:00:00Z'
-summary: Uniswap V3 Introduction - Discover the innovative liquidity model, essential concepts, and mathematical formulas.
+summary: Discover liquidity model, essential concepts, and mathematical basis.
 image: 'blogs/blockchain/uniswapV3/cover.webp'
 seriesName: 'Uniswap V3'
 seriesIndex: 1
