--- a/mdx_contents/blog/blockchain/DeFi/uniswapV3/02.mdx
+++ b/mdx_contents/blog/blockchain/DeFi/uniswapV3/02.mdx
@@ -2,7 +2,7 @@
 title: UniswapV3 02 - Tick and Position
 date: '2023-05-15T00:00:00Z'
 modifiedTime: '2023-05-23T00:00:00Z'
-summary: Uniswap V3 - Explore tick and position structure in concentrated liquidity.
+summary: Explore tick and position structure in concentrated liquidity AMM model.
 image: 'blogs/blockchain/uniswapV3/cover.webp'
 seriesName: 'Uniswap V3'
 seriesIndex: 2
